# PICIP

./: .dockerignore  .gitignore  Dockerfile  PICIP_installation.md  PICIP_manual.md  README.md  pyproject.toml
examples/: charge_ranges.json  charged.json  custom_spinel.json  uncharged_2d.json  uncharged_3d.json  uncharged_3d_multi_sample.json
schema/: input_schema.json  model.json
src/: .gitignore  MgAlCu.txt  MgBOF.txt  algorithm.py  diagram_plotting.py  error_new.py  exceptions.py  experimental_phase_fields.py  fielddata.py  main.py  materialproject_in.py  phase_field.py  phasefield.py  picip.py  plot_phase_diagram.py  requirements.txt  results_plotting.py  run_PICIP.py  setup_phase_field.py  simulating_phase_fractions.py  spread.py  synthetic_calibration.py  test.py  tutorial_2d.py  tutorial_3d.py  tutorial_setup.py  tutorial_spread.py  visualise_cube.py  visualise_square.py  wtconversion.py
src/app/: entrypoint.py
src/model/: __init__.py  phase_field.py  picip.py  visualise_cube.py  visualise_square.py
src/picip/: __init__.py  phase_field.py  visualise_cube.py  visualise_square.py
src/preprocessors/: __init__.py  composition.py
tests/: test_phase_field_setups.py  test_picip.py  test_spread.py
tutorials/: tutorial_2d.py  tutorial_3d.py  tutorial_setup.py  tutorial_spread.py
