[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "picip"
version = "0.1.2"
description = "Probabilistic Isolation of Inorganic Crystalline Phases"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "pymatgen",
    "plotly",
    "pandas",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
